# Ferrite

./: Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json
scripts/: copy-binary.js
src/: agent.rs  config.rs  context.rs  edit_plan.rs  lib.rs  main.rs  providers.rs  rpc.rs  session.rs  tool_parser.rs
src/providers/: anthropic.rs  deepseek.rs  ollama.rs  openai.rs  openai_compat.rs
src/tools/: command.rs  file_ops.rs  mod.rs  project.rs  registry.rs
vscode-ext/: chatView.ts  constants.ts  extension.ts  sidecar.ts
vscode-ext/webview/: content.ts
webview/: client.js  dom-helpers.js  markdown.js  plan-ui.js  session-ui.js  stream.js  styles.css  terminal.js  toast.js
