[package]
name = "ferrite"
version = "0.1.0"
edition = "2021"
description = "Ferrite - Rust-powered AI sidecar for VS Code"

[[bin]]
name = "ferrite-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
dirs = "5"
regex-lite = "0.1"
shlex = "1"
